--- a/htmlquiz02.html
+++ b/htmlquiz02.html
@@ -36,7 +36,7 @@
 				</dl>
 			</td>
 			<td align="right">
-				<a href="https://www.naver.com/" title="naver연결">
+				<a href="htmlquiz01.html" title="naver연결">
 				<img src="img.jpg" width="100px" height="100px">
 				</a>
 			</td>
